--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -52,26 +52,26 @@
   }
 }
 
-.registration {
-  margin-top: 30px;
-  padding-top: 20px;
-  border-top: 1px solid var(--light-gray);
+// .registration {
+//   margin-top: 30px;
+//   padding-top: 20px;
+//   border-top: 1px solid var(--light-gray);
 
-  span {
-    display: inline-block;
-    font-size: 16px;
-    margin-bottom: 40px;
+//   span {
+//     display: inline-block;
+//     font-size: 16px;
+//     margin-bottom: 40px;
 
-    a {
-      display: inline;
-      color: var(--prime-color);
-    }
-  }
+//     a {
+//       display: inline;
+//       color: var(--prime-color);
+//     }
+//   }
 
-  p {
-    margin-bottom: 30px;
-  }
-}
+//   p {
+//     margin-bottom: 30px;
+//   }
+// }
 .icons-wrapper {
   display: flex;
   align-items: center;
